# package_python_tutorial

./: .gitignore  LICENSE  README.md  pyproject.toml
src/palindrome_halioti2/: phrase.py
test/: test_phrase.py
